// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ul
  className="settings-sub-categories-list"
>
  <li
    key="email"
  >
    <h2
      className="settings-sub-category-name"
      data-key="email"
    >
      property.category.general.email
    </h2>
    <SafeHTMLInjection
      htmlAsString="property.category.general.email.description"
      sanitizeLevel={3}
    >
      <div
        className="settings-sub-category-description markdown"
      />
    </SafeHTMLInjection>
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        [
          {
            "definition": {
              "category": "general",
              "description": "When Foo then Bar",
              "fields": [],
              "key": "foo",
              "name": "Foo setting",
              "options": [],
              "subCategory": "email",
              "type": "INTEGER",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
    <withCurrentUserContext(EmailForm) />
  </li>
  <li
    key="qg"
  >
    <h2
      className="settings-sub-category-name"
      data-key="qg"
    >
      property.category.general.qg
    </h2>
    <SafeHTMLInjection
      htmlAsString="property.category.general.qg.description"
      sanitizeLevel={3}
    >
      <div
        className="settings-sub-category-description markdown"
      />
    </SafeHTMLInjection>
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        [
          {
            "definition": {
              "category": "general",
              "description": "awesome description",
              "fields": [],
              "key": "qg",
              "options": [],
              "subCategory": "qg",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
  </li>
</ul>
`;

exports[`should render correctly: subcategory 1`] = `
<ul
  className="settings-sub-categories-list"
>
  <li
    key="qg"
  >
    <h2
      className="settings-sub-category-name"
      data-key="qg"
    >
      property.category.general.qg
    </h2>
    <SafeHTMLInjection
      htmlAsString="property.category.general.qg.description"
      sanitizeLevel={3}
    >
      <div
        className="settings-sub-category-description markdown"
      />
    </SafeHTMLInjection>
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        [
          {
            "definition": {
              "category": "general",
              "description": "awesome description",
              "fields": [],
              "key": "qg",
              "options": [],
              "subCategory": "qg",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
  </li>
</ul>
`;
